0.1.8
* Support cmd-click for multi-select in tables on OSX
* Paginated tables revert to the first page when sorted.
* Selectable and searchable tables default to selecting matches.
* Sankey Butterflies avoid focusing redundantly on the same focal node.
* Clean up Table options for searching and pagination.
* Add Table API for searching.
* Add ability to specify an initial column to sort by header text.
* Clean up Table documentation for sorting and searching.
* Sunburst node now places root node inside center circle.
* Plots don't create redundant backgrounds/brushes when rerendered
* Tables and selectable Plots can specify an initial selection when rendering
* Sunburst can select an initial node to render as the root 
* Default selectable plots to have a visible unbrush without user styling
* Fix unbrush for selectable plots with margin and non-0 minimum domains.

0.1.7
* Rename NPM module to "chartcollection"
* Release under CC-BY 4.0 license
* Initialize global SVG defs when importing C3 module via require()
* Safe mode for Sankey to ensure nodes are at least as large as their links.
* Allow styling of the focal node for the Butterfly Sankey
* Workaround Chrome bug with SVG gradient masks for Butterfly Sankey
* Sankeys can extend past right edge to avoid overcrowding node columns

0.1.6
* Enable Cake builds for Less
* Expose drag_line_options for straight line layers.
* Fix Sankey regression from CoffeeScript compiler behavior change
* Update swimlanes example to not use CSS style broken on OSX Chrome

0.1.5
* Enable Cake builds for TypeScript
* fix path_options styling for path layers

0.1.4
* Publish to NPM as "q3"

0.1
* Initial Release

################################################################################
# Historic C4
################################################################################

0.4.2
* Disable page zooming over plots and capture 'pointer' events.
* Stackable layers tolerate empty data arrays for both layer and stacks.