@@ -120,7 +120,7 @@ can be further customized or adjusted by the user.</p>
     <pre><code class='coffeescript'>false</code></pre>
     <div class='docstring'>
   <p>[Boolean] By default, the layer and stack names will display as raw text.  If you would like
-HTML tags in the name string to render as HTML, then enable this option.  Please be careful of 
+HTML tags in the name string to render as HTML, then enable this option.  Please be careful of
 user-provided strings and security.</p>
 </div>
 <div class='tags'>
