@@ -19,7 +19,7 @@
 class c3.Legend extends c3.Base
     @version: 0.1
     type: 'legend'
-    
+
     # [Array] An array of data elements for the legend to display
     data: []
     # [Function] A callback used to determine a unique identification for each data element.
@@ -54,7 +54,7 @@ class c3.Legend extends c3.Base
     # [Boolean, {c3.selection.options}] Options for **bullets** of _nested_ list items.
     # This will default to `bullet_options` unless specified.
     nested_bullet_options: undefined
-    
+
     _init: =>
         # Default Options
         # * Legend items are the data elements converted to text
@@ -68,15 +68,15 @@ class c3.Legend extends c3.Base
         @bullet_options ?= {}
         @bullet_options.text ?= "•"
         @nested_bullet_options ?= @bullet_options
-        
+
         # Create the Legend List
         @list = c3.select(d3.select(@anchor),'ul').singleton()
-    
+
     _update: =>
         # Pull the specified data from the input data array
         # NOTE: This is done before we temporarily delete the text/html options!
         @current_data = if @filter then (datum for datum,i in @data when @filter(datum,i)) else @data
-        
+
         # Set the item content text/html using a nested span since we will create other
         # bullets and nested lists in the li elements that we don't want to be overwritten.
         item_content = {text:@item_options.text, html:@item_options.html}
@@ -87,12 +87,12 @@ class c3.Legend extends c3.Base
 
         # Set overall list options
         @list.options(@list_options).update()
-    
+
         # Create the Legend List Items
         @items = @list.select('ul:not(.child) > li').bind @current_data, @key
         @items.options(@item_options).update()
         @items.inherit('span.content').options(item_content).update()
-        
+
         # Create Bullets
         if @bullet_options
             @bullets = @items.inherit('ul:not(.child) > li > span.bullet',true,true)
@@ -103,16 +103,16 @@ class c3.Legend extends c3.Base
             @nested_items = @items.inherit('ul.child').select('li').bind @nest, @nest_key
             @nested_items.options(@nested_item_options).update()
             @nested_items.inherit('span.content').options(nested_item_content).update()
-            
+
             # Nested Bullets
             if @nested_bullet_options
                 @nested_bullets = @nested_items.inherit('span.bullet',true,true)
                 @nested_bullets.options(@nested_bullet_options).update()
-        
+
         # Restore item text/html options
         @item_options.text = item_content.text; @item_options.html = item_content.html
         @nested_item_options.text = nested_item_content.text; @nested_item_options.html = nested_item_content.html
-        
+
         # Give any list items that have children the class `parent`
         @items.select('ul > li').all.each ->
             d3.select(this).node().parentNode.parentNode.classList.add('parent')
@@ -151,11 +151,11 @@ class c3.Legend extends c3.Base
 class c3.Legend.PlotLegend extends c3.Legend
     @version: 0.1
     type: 'plot_legend'
-    
+
     # [{c3.Plot}] Plot to link with this legend
     plot: undefined
     # [Boolean] By default, the layer and stack names will display as raw text.  If you would like
-    # HTML tags in the name string to render as HTML, then enable this option.  Please be careful of 
+    # HTML tags in the name string to render as HTML, then enable this option.  Please be careful of
     # user-provided strings and security.
     html_names: false
     # [Number] When hovering over an item the other layers/stacks in the plot will fade to this
@@ -169,20 +169,20 @@ class c3.Legend.PlotLegend extends c3.Legend
         if not @plot? then throw Error "Plot legend must have a plot option refering to a c3.Plot."
         if @plot not instanceof c3.Plot then throw Error "Plot option must reference a c3.Plot type object."
         if not @plot.rendered then throw Error "plot_legend's linked plot should be rendered before rendering the legend."
-        
+
         # Setup default data to refer to the layers and stacks in a C3 plot
         @data = @plot.layers
         @key ?= (layer)-> layer.uid
         @nest ?= (layer)-> layer.stacks ? []
         @item_options ?= {}
         @nested_item_options ?= {}
-        
+
         # Callbacks to get the layer and stack names and titles
         layer_title = (layer,i)=> layer.options?.title ? @plot.layer_options?.title?(layer,i) ? @plot.layer_options?.title ? layer.name
         layer_name = (layer,i)-> layer.name ? layer_title(layer,i) ? layer.type
         stack_title = (stack,i,layer)-> stack.options?.title ? layer?.stack_options?.title?(stack) ? layer?.stack_options?.title ? stack.name
         stack_name = (stack,i,layer)-> stack.name ? stack_title(stack,i,layer) ? "stack"
-        
+
         # Setup the legend names and titles
         if @html_names
             @item_options.html ?= layer_name
@@ -192,7 +192,7 @@ class c3.Legend.PlotLegend extends c3.Legend
             @nested_item_options.text ?= stack_name
         @item_options.title ?= layer_title
         @nested_item_options.title ?= stack_title
-        
+
         if @hoverable
             # Highlight the layers in the chart when hovering over the legend.
             @item_options.events ?= {}
@@ -209,64 +209,79 @@ class c3.Legend.PlotLegend extends c3.Legend
                     layer.options?.styles?.opacity?(layer,i) ? layer.options?.styles?.opacity ?
                     layer.styles?.opacity?(layer,i) ? layer.styles?.opacity ? 1
                 @trigger 'layer_mouseleave', hover_layer, hover_layer_idx
-        
+
             # Highlight the stacks in the chart layer when hovering over nested items
             @nested_item_options.events ?= {}
             @nested_item_options.events.mouseenter ?= (hover_stack,hover_stack_idx,hover_layer_idx)=>
                 layer = @plot.layers[hover_layer_idx]
-                
+
                 # Fade other stacks
                 fade = @hover_fade
                 layer.groups.all.style 'opacity', (stack,i)->
                     old_opacity = d3.select(this).style('opacity') ? 1
                     if stack isnt hover_stack then fade * old_opacity else old_opacity
-                
+
                 # Animate stacked bar chart stacks to the baseline for comparison
                 duration = @duration
                 layer.rects?.all.filter((d,i,stack_idx)->stack_idx is hover_stack_idx)
                     .transition().duration(duration).attr 'transform', ->
                         rect = d3.select(this)
                         "translate(0,#{layer.v.range()[0]-rect.attr('y')-rect.attr('height')})"
-                
+
                 # Animate stacked line/area chart stacks to the baseline
                 if layer.path_generator?
+                    # Cache the current paths for the stacks in the layer
+                    @layer_paths_cached = cache = []
+                    layer.paths?.all.each (path, path_idx)->
+                        cache[path_idx] = d3.select(this).attr 'd'
                     layer.paths?.all.filter((stack,stack_idx)-> stack_idx is hover_stack_idx)
-                        .transition().duration(duration).attr 'd', (stack,stack_idx)->
+                        .transition().duration(duration).attr 'd', (stack, stack_idx)->
                             layer.path_generator
                                 .x (d,i)-> (layer.chart.orig_h ? layer.h) stack.values[i].x # TODO Hack, cleanup with migration to zoom as a mix-in
                                 .y (d,i)-> layer.v stack.values[i].y
                                 .y0 layer.v.range()[0]
                             layer.path_generator(stack.current_data)
-                
+
                 @trigger 'stack_mouseenter', hover_stack, hover_stack_idx, hover_layer_idx
-                
+
             @nested_item_options.events.mouseleave ?= (hover_stack,hover_stack_idx,hover_layer_idx)=>
                 layer = @plot.layers[hover_layer_idx]
-                
+
                 # Restore all stacks to their proper opacity
                 layer.groups.all.style 'opacity', (stack,i)=>
                     layer.stack_options?.styles?.opacity?(stack,i) ? layer.stack_options?.styles?.opacity ? 1
-                
+
                 # Restore stacked bar charts that were floated to the baseline
                 layer.rects?.all.transition().duration(@duration).attr 'transform', ''
-                
+
                 # Restore stacked line/area charts that were floated to the baseline
                 layer.paths?.all.interrupt()
-                layer.draw()
-                
+                if layer.paths?
+                    # If we have the paths for the stacks in the layer cached, then
+                    # restore them cheaply.  Otherwise, recompute the paths based on the
+                    # current data.
+                    if @layer_paths_cached?
+                        layer.paths?.all.filter((stack,stack_idx)-> stack_idx is hover_stack_idx)
+                            .attr 'd', @layer_paths_cached[hover_stack_idx]
+                    else
+                        layer.draw()
+
                 @trigger 'stack_mouseleave', hover_stack, hover_stack_idx, hover_layer_idx
-        
+
         super
         @list.all.classed 'plot_legend', true
         # When the linked plot's style is updated, update the legend styles
         @plot.on 'restyle.legend', @restyle
 
     _update: =>
+        # Clear any cached layer state.
+        delete @layer_paths_caches
+
         # Create empty bullets to be populated with SVG glyphs.
         delete @bullet_options.text
         delete @bullet_options.html
         super
-        
+
         # Create an SVG glyph for each layer or stack.  Bind it to an example "node" in the
         # plot's actual layer that will represent what styles we should copy for the legend.
         size = 16
